--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,6 +5,7 @@ ENV DEV_USER=dev
 RUN apt-get update && \
   apt-get install -y --no-install-recommends \
     build-essential \
+    clang \
     clang-format \
     cmake \
     curl \
